fixed z-index of swal

--- a/frontend/amrgl/src/App.css
+++ b/frontend/amrgl/src/App.css
@@ -22,7 +22,9 @@
   position: absolute; 
   bottom: 0%;
   right: 1%;
-  z-index: 9999;
+  z-index: 99;
 }
 
-
+.swal2-container {
+  z-index: 1000;
+}
